--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,27 @@
     </build>
     <dependencies>
         <dependency>
+            <groupId>ch.exense.step</groupId>
+            <artifactId>step-api-keyword</artifactId>
+            <version>1.1.5</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.15</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.15</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+        <dependency>
             <groupId>io.sentry</groupId>
             <artifactId>sentry</artifactId>
             <version>5.3.0</version>
@@ -53,11 +74,11 @@
             <artifactId>extentreports</artifactId>
             <version>2.41.1</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.vimalselvam</groupId>-->
-<!--            <artifactId>testng-extentsreport</artifactId>-->
-<!--            <version>1.3.1</version>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.vimalselvam</groupId>-->
+        <!--            <artifactId>testng-extentsreport</artifactId>-->
+        <!--            <version>1.3.1</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>com.aventstack</groupId>
             <artifactId>extentreports</artifactId>
