移动端元素列表

--- a/config/element.properties
+++ b/config/element.properties
@@ -1,3 +1,8 @@
-shiLiu = cn.v6.sixrooms
-xiuChang = cn.v6.xiuchang
-lianYun = com.tencent.tmgp.sixrooms
+#shiLiu=cn.v6.sixrooms
+#xiuChang=cn.v6.xiuchang
+#lianYun=com.tencent.tmgp.sixrooms
+#com.tencent.tmgp.sixrooms:id/tv_agree 个人信息保护指引
+#com.tencent.tmgp.sixrooms:id/close 我知道了/设置青少年模式
+#com.tencent.tmgp.sixrooms:id/tv_agree 隐私政策更新
+#com.tencent.tmgp.sixrooms:id/agree 去开启定位权限
+#com.android.permissioncontroller:id/permission_allow_always_button 始终允许
